fix: table container overflow

--- a/src/components/table/Table.scss
+++ b/src/components/table/Table.scss
@@ -72,6 +72,8 @@
   }
 
   & > .rows {
+    overflow: overlay; // FIXME: deprecated!
+
     &::-webkit-scrollbar {
       width: 0.3em;
     }
